[metadata]
name = tuf
version = 1.0.0
author = https://www.updateframework.com
author_email = theupdateframework@googlegroups.com
description = A secure updater framework for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.updateframework.com
project_urls =
  Documentation = https://theupdateframework.readthedocs.io/en/stable/
  Issues = https://github.com/theupdateframework/python-tuf/issues
  Source = https://github.com/theupdateframework/python-tuf
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: Implementation :: CPython
  Topic :: Security
  Topic :: Software Development
keywords = update updater secure authentication key compromise revocation
license = 'MIT or Apache License 2.0'
license_files = LICENSE LICENSE-MIT

[options]
packages = find:
python_requires = ~=3.7
install_requires =
  requests>=2.19.1
  securesystemslib>=0.22.0

[options.packages.find]
exclude = tests

[options.package_data]
tuf = py.typed

[check-manifest]
ignore =
  .readthedocs.yaml
